// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheet /> should render Header/Footer/Body properly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityHint="Tap to close the Bottom Sheet"
    accessibilityLabel="Bottom Sheet backdrop"
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    handlerTag={4}
    handlerType="TapGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    pointerEvents="auto"
    style={
      [
        {
          "backgroundColor": "black",
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "hsla(0, 0%, 0%, 0.56)",
            "zIndex": 100,
          },
        ],
        {
          "flex": 1,
          "opacity": undefined,
        },
      ]
    }
  />
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      [
        {
          "zIndex": 100,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "shadowColor": "hsla(217,56%,17%,0.64)",
            "shadowOffset": {
              "height": -18,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 12,
          },
          {
            "flexDirection": "column-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
            "transform": [
              {
                "translateY": 1334,
              },
            ],
          },
        ]
      }
    >
      <View
        animatedIndex={
          {
            "value": -1,
          }
        }
        animatedPosition={
          {
            "value": 1334,
          }
        }
        data-blade-component="base-box"
        pointerEvents="none"
        style={
          [
            {
              "pointerEvents": "none",
            },
            {
              "alignItems": "center",
              "backgroundColor": "hsla(0, 0%, 100%, 1)",
              "borderTopLeftRadius": 16,
              "borderTopRightRadius": 16,
              "justifyContent": "center",
              "position": "relative",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "paddingBottom": -999,
            },
          ]
        }
      >
        <View
          collapsable={false}
          handlerTag={2}
          handlerType="PanGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          style={
            [
              {},
              {
                "height": 0,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 9999,
                },
                undefined,
                {
                  "transform": [
                    {
                      "translateY": 999,
                    },
                  ],
                },
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                backgroundColor="popup.background.subtle"
                data-blade-component="base-box"
                flexShrink={0}
                style={
                  [
                    {
                      "backgroundColor": "hsla(0, 0%, 100%, 1)",
                      "flexShrink": 0,
                      "marginTop": "auto",
                      "touchAction": "none",
                      "width": "100%",
                      "zIndex": 2,
                    },
                  ]
                }
                touchAction="none"
                width="100%"
                zIndex={2}
              >
                <View
                  borderBottomColor="surface.border.gray.muted"
                  borderPosition="borderBottom"
                  data-blade-component="divider"
                  dividerStyle="solid"
                  isDividerHorizontal={true}
                  style={
                    [
                      {
                        "borderBottomColor": "hsla(211, 20%, 52%, 0.18)",
                        "borderBottomStyle": "solid",
                      },
                      {
                        "borderBottomStyle": "solid",
                        "borderBottomWidth": 1,
                        "borderWidth": 0,
                        "flexGrow": 1,
                      },
                    ]
                  }
                  thickness="thin"
                />
                <View
                  data-blade-component="base-box"
                  style={
                    [
                      {
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    borderRadius="4px"
                    borderWidth="1px"
                    buttonPaddingBottom="0px"
                    buttonPaddingLeft="20px"
                    buttonPaddingRight="20px"
                    buttonPaddingTop="0px"
                    collapsable={false}
                    data-blade-component="button"
                    defaultBackgroundColor="hsla(0, 0%, 100%, 0)"
                    defaultBorderColor="hsla(227, 100%, 59%, 1)"
                    focusBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                    focusBorderColor="hsla(227, 100%, 59%, 1)"
                    focusRingColor="hsla(227, 100%, 59%, 0.18)"
                    focusable={true}
                    hoverBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                    hoverBorderColor="hsla(227, 100%, 59%, 1)"
                    isFullWidth={true}
                    isLoading={false}
                    isPressed={false}
                    minHeight="36px"
                    motionDuration="duration.xquick"
                    motionEasing="easing.standard"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseUp={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "backgroundColor": "hsla(0, 0%, 100%, 0)",
                          "borderColor": "hsla(227, 100%, 59%, 1)",
                          "borderRadius": 4,
                          "borderStyle": "solid",
                          "borderWidth": 1,
                          "cursor": "pointer",
                          "display": "flex",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 36,
                          "overflow": "hidden",
                          "paddingBottom": 0,
                          "paddingLeft": 20,
                          "paddingRight": 20,
                          "paddingTop": 0,
                          "textDecorationColor": "black",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "width": "100%",
                        },
                        {
                          "backgroundColor": "hsla(0, 0%, 100%, 0)",
                          "borderColor": "hsla(227, 100%, 59%, 1)",
                        },
                      ]
                    }
                    type="button"
                  >
                    <View
                      style={
                        {
                          "transform": [
                            {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <View
                        alignItems="center"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        isHidden={false}
                        justifyContent="center"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexBasis": 0,
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "center",
                              "zIndex": 1,
                            },
                            {
                              "opacity": 1,
                            },
                          ]
                        }
                        zIndex={1}
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.primary.subtle"
                          data-blade-component="base-text"
                          fontSize={100}
                          fontWeight="medium"
                          lineHeight={100}
                          style={
                            [
                              {
                                "color": "hsla(227, 100%, 59%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textAlign": "center",
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                          textAlign="center"
                        >
                          Remove address
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityHint="Drag up or down to extend or minimize the Bottom Sheet"
        accessibilityLabel="Bottom Sheet handle"
        accessibilityRole="adjustable"
        accessible={true}
        collapsable={false}
        handlerTag={3}
        handlerType="PanGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
      >
        <View
          data-blade-component="base-box"
          left="spacing.0"
          onLayout={[Function]}
          position="relative"
          right="spacing.0"
          style={
            [
              {
                "left": 0,
                "position": "relative",
                "right": 0,
                "top": 0,
              },
            ]
          }
          top="spacing.0"
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "zIndex": 100,
                },
              ]
            }
            zIndex={100}
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "column",
                    "flexShrink": 0,
                    "justifyContent": "center",
                    "marginBottom": 4,
                    "paddingTop": 12,
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                    "zIndex": 100,
                  },
                ]
              }
            >
              <View
                data-blade-component="base-box"
                style={
                  [
                    {},
                    {
                      "backgroundColor": "hsla(211, 20%, 52%, 0.06)",
                      "borderRadius": 16,
                      "content": "''",
                      "height": 4,
                      "marginBottom": "auto",
                      "marginLeft": "auto",
                      "marginRight": "auto",
                      "marginTop": "auto",
                      "width": 56,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            data-blade-component="base-box"
            flexShrink={0}
            overflow="visible"
            style={
              [
                {
                  "flexShrink": 0,
                  "overflow": "visible",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {},
                ]
              }
            >
              <View
                data-blade-component="base-box"
                style={
                  [
                    {
                      "marginBottom": 16,
                      "marginTop": 16,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "touchAction": "none",
                    },
                  ]
                }
                touchAction="none"
              >
                <View
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="row"
                  style={
                    [
                      {
                        "display": "flex",
                        "flexDirection": "row",
                        "userSelect": "none",
                      },
                    ]
                  }
                  userSelect="none"
                >
                  <View
                    alignItems="flex-start"
                    data-blade-component="base-box"
                    display="flex"
                    flexDirection="row"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flexBasis": "auto",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "flexShrink": 1,
                          "marginRight": "auto",
                          "paddingRight": 16,
                        },
                      ]
                    }
                  >
                    <View
                      data-blade-component="base-box"
                      style={
                        [
                          {
                            "flexBasis": "auto",
                            "flexGrow": 1,
                            "flexShrink": 1,
                          },
                        ]
                      }
                    >
                      <View
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        flexShrink={0}
                        style={
                          [
                            {
                              "display": "flex",
                              "flexDirection": "row",
                              "flexShrink": 0,
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          color="surface.text.gray.normal"
                          data-blade-component="text"
                          fontFamily="text"
                          fontSize={200}
                          fontStyle="normal"
                          fontWeight="semibold"
                          lineHeight={200}
                          marginTop="1px"
                          style={
                            [
                              {
                                "color": "hsla(212, 39%, 16%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 16,
                                "fontStyle": "normal",
                                "fontWeight": "600",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 1,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                        >
                          Address Details
                        </Text>
                        <View
                          data-blade-component="base-box"
                          style={
                            [
                              {
                                "marginLeft": 8,
                              },
                            ]
                          }
                        >
                          <View
                            alignItems="center"
                            data-blade-component="box"
                            display="flex"
                            height="28px"
                            justifyContent="center"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "height": 28,
                                  "justifyContent": "center",
                                },
                              ]
                            }
                          >
                            <View
                              data-blade-component="counter"
                              display="flex"
                              style={
                                [
                                  {
                                    "display": "flex",
                                  },
                                ]
                              }
                            >
                              <View
                                backgroundColor="feedback.background.positive.subtle"
                                data-blade-component="base-box"
                                minHeight="20px"
                                platform="onMobile"
                                size="medium"
                                style={
                                  [
                                    {
                                      "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
                                      "minHeight": 20,
                                    },
                                    {
                                      "alignSelf": "center",
                                      "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
                                      "borderRadius": 9999,
                                      "display": "flex",
                                      "flexWrap": "nowrap",
                                      "maxWidth": 100,
                                    },
                                  ]
                                }
                              >
                                <View
                                  alignItems="center"
                                  data-blade-component="base-box"
                                  display="flex"
                                  flexDirection="row"
                                  justifyContent="center"
                                  overflow="hidden"
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "display": "flex",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "overflow": "hidden",
                                        "paddingLeft": 8,
                                        "paddingRight": 8,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    accessible={true}
                                    color="feedback.text.positive.intense"
                                    data-blade-component="text"
                                    fontFamily="text"
                                    fontSize={75}
                                    fontStyle="normal"
                                    fontWeight="medium"
                                    lineHeight={75}
                                    numberOfLines={1}
                                    style={
                                      [
                                        {
                                          "color": "hsla(150, 100%, 27%, 1)",
                                          "fontFamily": "Inter",
                                          "fontSize": 12,
                                          "fontStyle": "normal",
                                          "fontWeight": "500",
                                          "letterSpacing": 0,
                                          "lineHeight": 18,
                                          "marginBottom": 0,
                                          "marginLeft": 0,
                                          "marginRight": 0,
                                          "marginTop": 0,
                                          "paddingBottom": 0,
                                          "paddingLeft": 0,
                                          "paddingRight": 0,
                                          "paddingTop": 0,
                                          "textAlign": "center",
                                          "textDecorationLine": "none",
                                        },
                                      ]
                                    }
                                    textAlign="center"
                                  >
                                    2
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Text
                        accessible={true}
                        color="surface.text.gray.muted"
                        data-blade-component="text"
                        fontFamily="text"
                        fontSize={75}
                        fontStyle="normal"
                        fontWeight="regular"
                        lineHeight={75}
                        style={
                          [
                            {
                              "color": "hsla(211, 22%, 56%, 1)",
                              "fontFamily": "Inter",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 18,
                              "marginBottom": 0,
                              "marginLeft": 0,
                              "marginRight": 0,
                              "marginTop": 0,
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationLine": "none",
                            },
                          ]
                        }
                      >
                        Saving addresses will improve your checkout experience
                      </Text>
                    </View>
                  </View>
                  <View
                    data-blade-component="base-box"
                    style={
                      [
                        {
                          "marginRight": 16,
                        },
                      ]
                    }
                  >
                    <View
                      alignItems="center"
                      data-blade-component="box"
                      display="flex"
                      height="28px"
                      justifyContent="center"
                      style={
                        [
                          {
                            "alignItems": "center",
                            "display": "flex",
                            "height": 28,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <View
                        data-blade-component="badge"
                        display="flex"
                        style={
                          [
                            {
                              "display": "flex",
                            },
                          ]
                        }
                      >
                        <View
                          backgroundColor="feedback.background.positive.subtle"
                          data-blade-component="base-box"
                          height="20px"
                          size="medium"
                          style={
                            [
                              {
                                "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
                                "height": 20,
                                "textAlign": "left",
                              },
                              {
                                "alignSelf": "center",
                                "backgroundColor": "hsla(150, 100%, 32%, 0.09)",
                                "borderRadius": 9999,
                                "display": "flex",
                                "flexWrap": "nowrap",
                              },
                            ]
                          }
                          textAlign="left"
                        >
                          <View
                            alignItems="center"
                            data-blade-component="base-box"
                            display="flex"
                            flexDirection="row"
                            justifyContent="center"
                            overflow="hidden"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "overflow": "hidden",
                                  "paddingLeft": 8,
                                  "paddingRight": 8,
                                },
                              ]
                            }
                          >
                            <Text
                              accessible={true}
                              color="feedback.text.positive.intense"
                              data-blade-component="text"
                              fontFamily="text"
                              fontSize={75}
                              fontStyle="normal"
                              fontWeight="medium"
                              lineHeight={75}
                              numberOfLines={1}
                              style={
                                [
                                  {
                                    "color": "hsla(150, 100%, 27%, 1)",
                                    "fontFamily": "Inter",
                                    "fontSize": 12,
                                    "fontStyle": "normal",
                                    "fontWeight": "500",
                                    "letterSpacing": 0,
                                    "lineHeight": 18,
                                    "marginBottom": 0,
                                    "marginLeft": 0,
                                    "marginRight": 0,
                                    "marginTop": 0,
                                    "paddingBottom": 0,
                                    "paddingLeft": 0,
                                    "paddingRight": 0,
                                    "paddingTop": 0,
                                    "textDecorationLine": "none",
                                  },
                                ]
                              }
                            >
                              Action Needed
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    alignItems="center"
                    data-blade-component="box"
                    display="flex"
                    height="28px"
                    justifyContent="center"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "display": "flex",
                          "height": 28,
                          "justifyContent": "center",
                        },
                      ]
                    }
                  >
                    <View
                      accessibilityLabel="Close"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      emphasis="intense"
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "alignSelf": "center",
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        accessibilityElementsHidden={true}
                        align="xMidYMid"
                        bbHeight="20px"
                        bbWidth="20px"
                        data-blade-component="icon"
                        fill="none"
                        focusable={false}
                        height="20px"
                        importantForAccessibility="no-hide-descendants"
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            [
                              {},
                            ],
                            {
                              "flex": 0,
                              "height": 20,
                              "width": 20,
                            },
                          ]
                        }
                        vbHeight={24}
                        vbWidth={24}
                        width="20px"
                      >
                        <RNSVGGroup
                          fill={null}
                          propList={
                            [
                              "fill",
                            ]
                          }
                        >
                          <RNSVGPath
                            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                            fill={
                              {
                                "payload": 4285959847,
                                "type": 0,
                              }
                            }
                            propList={
                              [
                                "fill",
                              ]
                            }
                          />
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                  </View>
                </View>
                <View
                  alignItems="center"
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="row"
                  justifyContent="space-between"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "space-between",
                        "width": "100%",
                      },
                    ]
                  }
                  width="100%"
                >
                  <View
                    data-blade-component="box"
                    style={
                      [
                        {
                          "width": "100%",
                        },
                      ]
                    }
                    width="100%"
                  />
                </View>
              </View>
              <View
                borderBottomColor="surface.border.gray.muted"
                borderPosition="borderBottom"
                data-blade-component="divider"
                dividerStyle="solid"
                isDividerHorizontal={true}
                style={
                  [
                    {
                      "borderBottomColor": "hsla(211, 20%, 52%, 0.18)",
                      "borderBottomStyle": "solid",
                    },
                    {
                      "borderBottomStyle": "solid",
                      "borderBottomWidth": 1,
                      "borderWidth": 0,
                      "flexGrow": 1,
                    },
                  ]
                }
                thickness="thin"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<BottomSheet /> should render empty header 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityHint="Tap to close the Bottom Sheet"
    accessibilityLabel="Bottom Sheet backdrop"
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    handlerTag={8}
    handlerType="TapGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    pointerEvents="auto"
    style={
      [
        {
          "backgroundColor": "black",
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "hsla(0, 0%, 0%, 0.56)",
            "zIndex": 100,
          },
        ],
        {
          "flex": 1,
          "opacity": undefined,
        },
      ]
    }
  />
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      [
        {
          "zIndex": 100,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "bottom": 0,
          "overflow": "hidden",
          "top": 0,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "shadowColor": "hsla(217,56%,17%,0.64)",
            "shadowOffset": {
              "height": -18,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 12,
          },
          {
            "flexDirection": "column-reverse",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 1,
            "transform": [
              {
                "translateY": 1334,
              },
            ],
          },
        ]
      }
    >
      <View
        animatedIndex={
          {
            "value": -1,
          }
        }
        animatedPosition={
          {
            "value": 1334,
          }
        }
        data-blade-component="base-box"
        pointerEvents="none"
        style={
          [
            {
              "pointerEvents": "none",
            },
            {
              "alignItems": "center",
              "backgroundColor": "hsla(0, 0%, 100%, 1)",
              "borderTopLeftRadius": 16,
              "borderTopRightRadius": 16,
              "justifyContent": "center",
              "position": "relative",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "paddingBottom": -999,
            },
          ]
        }
      >
        <View
          collapsable={false}
          handlerTag={6}
          handlerType="PanGestureHandler"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          style={
            [
              {},
              {
                "height": 0,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 9999,
                },
                undefined,
                {
                  "transform": [
                    {
                      "translateY": 999,
                    },
                  ],
                },
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                backgroundColor="popup.background.subtle"
                data-blade-component="base-box"
                flexShrink={0}
                style={
                  [
                    {
                      "backgroundColor": "hsla(0, 0%, 100%, 1)",
                      "flexShrink": 0,
                      "marginTop": "auto",
                      "touchAction": "none",
                      "width": "100%",
                      "zIndex": 2,
                    },
                  ]
                }
                touchAction="none"
                width="100%"
                zIndex={2}
              >
                <View
                  borderBottomColor="surface.border.gray.muted"
                  borderPosition="borderBottom"
                  data-blade-component="divider"
                  dividerStyle="solid"
                  isDividerHorizontal={true}
                  style={
                    [
                      {
                        "borderBottomColor": "hsla(211, 20%, 52%, 0.18)",
                        "borderBottomStyle": "solid",
                      },
                      {
                        "borderBottomStyle": "solid",
                        "borderBottomWidth": 1,
                        "borderWidth": 0,
                        "flexGrow": 1,
                      },
                    ]
                  }
                  thickness="thin"
                />
                <View
                  data-blade-component="base-box"
                  style={
                    [
                      {
                        "paddingBottom": 16,
                        "paddingLeft": 16,
                        "paddingRight": 16,
                        "paddingTop": 16,
                      },
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": false,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    borderRadius="4px"
                    borderWidth="1px"
                    buttonPaddingBottom="0px"
                    buttonPaddingLeft="20px"
                    buttonPaddingRight="20px"
                    buttonPaddingTop="0px"
                    collapsable={false}
                    data-blade-component="button"
                    defaultBackgroundColor="hsla(0, 0%, 100%, 0)"
                    defaultBorderColor="hsla(227, 100%, 59%, 1)"
                    focusBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                    focusBorderColor="hsla(227, 100%, 59%, 1)"
                    focusRingColor="hsla(227, 100%, 59%, 0.18)"
                    focusable={true}
                    hoverBackgroundColor="hsla(227, 100%, 59%, 0.09)"
                    hoverBorderColor="hsla(227, 100%, 59%, 1)"
                    isFullWidth={true}
                    isLoading={false}
                    isPressed={false}
                    minHeight="36px"
                    motionDuration="duration.xquick"
                    motionEasing="easing.standard"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseUp={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    role="button"
                    style={
                      [
                        {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "backgroundColor": "hsla(0, 0%, 100%, 0)",
                          "borderColor": "hsla(227, 100%, 59%, 1)",
                          "borderRadius": 4,
                          "borderStyle": "solid",
                          "borderWidth": 1,
                          "cursor": "pointer",
                          "display": "flex",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 36,
                          "overflow": "hidden",
                          "paddingBottom": 0,
                          "paddingLeft": 20,
                          "paddingRight": 20,
                          "paddingTop": 0,
                          "textDecorationColor": "black",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "width": "100%",
                        },
                        {
                          "backgroundColor": "hsla(0, 0%, 100%, 0)",
                          "borderColor": "hsla(227, 100%, 59%, 1)",
                        },
                      ]
                    }
                    type="button"
                  >
                    <View
                      style={
                        {
                          "transform": [
                            {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <View
                        alignItems="center"
                        data-blade-component="base-box"
                        display="flex"
                        flexDirection="row"
                        isHidden={false}
                        justifyContent="center"
                        style={
                          [
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexBasis": 0,
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "center",
                              "zIndex": 1,
                            },
                            {
                              "opacity": 1,
                            },
                          ]
                        }
                        zIndex={1}
                      >
                        <Text
                          accessible={true}
                          color="interactive.text.primary.subtle"
                          data-blade-component="base-text"
                          fontSize={100}
                          fontWeight="medium"
                          lineHeight={100}
                          style={
                            [
                              {
                                "color": "hsla(227, 100%, 59%, 1)",
                                "fontFamily": "Inter",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": "500",
                                "letterSpacing": 0,
                                "lineHeight": 20,
                                "marginBottom": 0,
                                "marginLeft": 0,
                                "marginRight": 0,
                                "marginTop": 0,
                                "paddingBottom": 0,
                                "paddingLeft": 0,
                                "paddingRight": 0,
                                "paddingTop": 0,
                                "textAlign": "center",
                                "textDecorationLine": "none",
                              },
                            ]
                          }
                          textAlign="center"
                        >
                          Remove address
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityHint="Drag up or down to extend or minimize the Bottom Sheet"
        accessibilityLabel="Bottom Sheet handle"
        accessibilityRole="adjustable"
        accessible={true}
        collapsable={false}
        handlerTag={7}
        handlerType="PanGestureHandler"
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onLayout={[Function]}
      >
        <View
          data-blade-component="base-box"
          left="spacing.0"
          onLayout={[Function]}
          position="absolute"
          right="spacing.0"
          style={
            [
              {
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          top="spacing.0"
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "zIndex": 100,
                },
              ]
            }
            zIndex={100}
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {},
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "column",
                    "flexShrink": 0,
                    "justifyContent": "center",
                    "marginBottom": 4,
                    "paddingTop": 12,
                    "position": "relative",
                    "touchAction": "none",
                    "width": "100%",
                    "zIndex": 100,
                  },
                ]
              }
            >
              <View
                data-blade-component="base-box"
                style={
                  [
                    {},
                    {
                      "backgroundColor": "hsla(211, 20%, 52%, 0.06)",
                      "borderRadius": 16,
                      "content": "''",
                      "height": 4,
                      "marginBottom": "auto",
                      "marginLeft": "auto",
                      "marginRight": "auto",
                      "marginTop": "auto",
                      "width": 56,
                    },
                  ]
                }
              />
            </View>
          </View>
          <View
            data-blade-component="base-box"
            flexShrink={0}
            overflow="visible"
            style={
              [
                {
                  "flexShrink": 0,
                  "overflow": "visible",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              height="8px"
              position="relative"
              right="spacing.0"
              style={
                [
                  {
                    "height": 8,
                    "position": "relative",
                    "right": 0,
                    "top": 0,
                    "touchAction": "none",
                  },
                ]
              }
              top="spacing.0"
              touchAction="none"
            >
              <View
                alignItems="center"
                backgroundColor="popup.background.subtle"
                borderRadius="max"
                data-blade-component="base-box"
                display="flex"
                flexShrink={0}
                height="28px"
                justifyContent="center"
                position="absolute"
                right="spacing.5"
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "hsla(0, 0%, 100%, 1)",
                      "borderRadius": 9999,
                      "display": "flex",
                      "flexShrink": 0,
                      "height": 28,
                      "justifyContent": "center",
                      "position": "absolute",
                      "right": 16,
                      "top": -4,
                      "width": 28,
                      "zIndex": 100,
                    },
                  ]
                }
                top="-4px"
                width="28px"
                zIndex={100}
              >
                <View
                  accessibilityLabel="Close"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  emphasis="intense"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignSelf": "center",
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    accessibilityElementsHidden={true}
                    align="xMidYMid"
                    bbHeight="20px"
                    bbWidth="20px"
                    data-blade-component="icon"
                    fill="none"
                    focusable={false}
                    height="20px"
                    importantForAccessibility="no-hide-descendants"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        [
                          {},
                        ],
                        {
                          "flex": 0,
                          "height": 20,
                          "width": 20,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width="20px"
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                        fill={
                          {
                            "payload": 4285959847,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
